--- a/Homework-Dashboard.html
+++ b/Homework-Dashboard.html
@@ -24,7 +24,7 @@
                         <ul>
                             <li> <a href="https://keyur18842.herokuapp.com/hw1/index.html">Index Page</a></li>
                             <li><a href="https://keyur18842.herokuapp.com/hw1/table.html">Table page</li>
-                            <li><a href="https://joshi16552.herokuapp.com/hw1/calculator.html">Calculator</a>
+                            <li><a href="https://keyur18842.herokuapp.com/hw1/Calculator.html">Calculator</a>
                         </ul>
                         <span> &nbsp</span>
                       
