index hw3 change

--- a/index.html
+++ b/index.html
@@ -27,15 +27,22 @@
                             <li><a href="https://keyur18842.herokuapp.com/hw1/Calculator.html">Calculator</a>
                         </ul>
                         <span> &nbsp</span>
-               
+
                         <li>
                             Home Work 2
                         </li>
                         <ul>
                             <li> <a href="https://keyur18842.herokuapp.com/hw2/bouncingball.html">Bouncing Ball</a></li>
-                        
+
                         </ul>
                         <span> &nbsp</span>
+                        <li>
+                            Home Work 3
+                        </li>
+                        <ul>
+                            <li> <a href="https://keyur18842.herokuapp.com/hw3/tic-tac-toe-2.html">Tic-tac-toe</a></li>
+
+                        </ul>
 
                     </ol>
                 </td>
