hw4 adding tittle

--- a/hw4/NumberColorForm.html
+++ b/hw4/NumberColorForm.html
@@ -47,10 +47,11 @@
             padding-left: 18px;
         }
     </style>
-   
+  
 </head>
 <body>
     <form id="myform" onsubmit="event.preventDefault();" >
+        <h2>Survey Form and WebSQL_CS557D_HW_Keyur Patel_18842</h2>
         <div id="main">
             <div id="div1">
                 <label>Color:</label>
