--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
                             <li> <a href="https://keyur18842.herokuapp.com/hw4/NumberColorForm.html">Survey Form and WebSQL </a></li>
 
                         </ul>
+                        <li>
+                            Home Work 5
+                        </li>
+                        <ul>
+                            <li> <a href="https://keyur18842.herokuapp.com/hw5/Calculator.html">Calculator Implementation</a></li>
+                            <li> <a href="https://keyur18842.herokuapp.com/hw5/dc/DistanceCalculator.html">Geolocation Distance Calculator</a></li>
+
+                        </ul>
 
                     </ol>
                 </td>
