--- a/hw6/client.html
+++ b/hw6/client.html
@@ -20,9 +20,9 @@ function WebSocketTest()
      //   "Websocket handshake". For example, you can access
      //      http://npu-socket.herokuapp.com/
      //   then it is possible to write like this
-     //       var ws = new WebSocket("wss://npu-socket.herokuapp.com", 'echo-protocol');
-   // var ws = new WebSocket("ws://localhost:8080", 'echo-protocol');
-     var ws = new WebSocket("wss://" + window.location.host, 'echo-protocol');
+          var ws = new WebSocket("wss://npu-socket.herokuapp.com", 'echo-protocol');
+   //var ws = new WebSocket("ws://localhost:8080", 'echo-protocol');
+    // var ws = new WebSocket("wss://" + window.location.host, 'echo-protocol');
    
      // - The readonly attribute readyState represents the state
      //   of the connection. It can have the following values:
