--- a/hw5/dc/DistanceCalculator.html
+++ b/hw5/dc/DistanceCalculator.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Distance Calculator</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false&libraries=places"></script>
     <script type="text/javascript" src="main.js"></script>
 
 </head>
 <body>
+    
     <h1>Geolocation_CS557D_HW_Keyur Patel_18842</h1>
     <div id="main">
         <div id="divadd1">
