change to https

--- a/hw6/client.html
+++ b/hw6/client.html
@@ -21,7 +21,7 @@ function WebSocketTest()
      //      http://npu-socket.herokuapp.com/
      //   then it is possible to write like this
          // var ws = new WebSocket("wss://npu-socket.herokuapp.com    ", 'echo-protocol');
-  var ws = new WebSocket("ws://localhost", 'echo-protocol');
+  var ws = new WebSocket("wss://localhost", 'echo-protocol');
     // var ws = new WebSocket("wss://" + window.location.host, 'echo-protocol');
    
      // - The readonly attribute readyState represents the state
