--- a/hw6/client.html
+++ b/hw6/client.html
@@ -21,9 +21,15 @@ function WebSocketTest()
      //      http://npu-socket.herokuapp.com/
      //   then it is possible to write like this
          // var ws = new WebSocket("wss://npu-socket.herokuapp.com    ", 'echo-protocol');
-  var ws = new WebSocket("wss://localhost", 'echo-protocol');
+  //var ws = new WebSocket("wss://localhost", 'echo-protocol');
     // var ws = new WebSocket("wss://" + window.location.host, 'echo-protocol');
-   
+     if (window.location.protocol == "https:") {
+         var ws = new WebSocket("wss://" + window.location.host, 'echo-protocol');
+     } else {
+
+         var ws = new WebSocket("ws://" + window.location.host, 'echo-protocol');
+     }
+
      // - The readonly attribute readyState represents the state
      //   of the connection. It can have the following values:
      //   + A value of 0 indicates that the connection has
