index hw6 updated

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <li> <a href="https://keyur18842.herokuapp.com/hw4/NumberColorForm.html">Survey Form and WebSQL </a></li>
 
                         </ul>
-<span> &nbsp</span>
+                        <span> &nbsp</span>
                         <li>
                             Home Work 5
                         </li>
@@ -59,6 +59,13 @@
                             <li> <a href="https://keyur18842.herokuapp.com/hw5/Calculator.html">Calculator Implementation</a></li>
                             <li> <a href="https://keyur18842.herokuapp.com/hw5/dc/DistanceCalculator.html">Geolocation Distance Calculator</a></li>
 
+                        </ul>
+                        <span> &nbsp</span>
+                        <li>
+                            Home Work 6
+                        </li>
+                        <ul>
+                            <li> <a href="https://keyur18842-nodejs.herokuapp.com/client.html">WebSocket</a></li>
                         </ul>
 
                     </ol>
