--- a/hw5/calculator/Calculator.html
+++ b/hw5/calculator/Calculator.html
@@ -17,7 +17,7 @@
                            value="m-" onclick='c("...............by............")'>
                     <input type="button" class="button gray" value="m+" onclick='c(".....................Anoop")'>-->
                     <label id="lab">Keyur_18842</label>
-                    <input type="button" class="button blue" id="divide" value="/" onclick='v("/")'>
+                    <input type="button" class="button blue" id="divide" value="/" onclick="document.calculator.ans.value+='/'">
                 </p>
                 <p>
                     <input type="button" class="button black" value="7" onclick="document.calculator.ans.value+='7'">
