--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
                         <ul>
                             <li> <a href="https://keyur18842-nodejs.herokuapp.com/client.html">WebSocket</a></li>
                         </ul>
+                        <span> &nbsp</span>
+                        <li>
+                            Home Work 7
+                        </li>
+                        <ul>
+                            <li> <a href="https://keyur18842-nodejs-chat.herokuapp.com/">Socket.io(chat broadcasting)</a></li>
+                        </ul>
 
                     </ol>
                 </td>
