--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
                         <ul>
                             <li> <a href="https://keyur18842-nodejs-chat.herokuapp.com/">Socket.io(chat broadcasting)</a></li>
                         </ul>
+                        <span> &nbsp</span>
+                        <li>
+                            Home Work 8
+                        </li>
+                        <ul>
+                            <li> <a href="https://keyur18842-easyrtc.herokuapp.com/">EasyRTC(audio-video chat)</a></li>
+                        </ul>
 
                     </ol>
                 </td>
