--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
                         <ul>
                             <li> <a href="https://keyur18842-easyrtc.herokuapp.com/">EasyRTC(audio-video chat)</a></li>
                         </ul>
+                        <span> &nbsp</span>
+                        <li>
+                            Home Work 9
+                        </li>
+                        <ul>
+                            <li> <a href="https://json-18842.herokuapp.com/api/score?course_id=CS551">Json-CS551 Data</a></li>
+                            <li> <a href="https://json-18842.herokuapp.com/api/score?course_id=CS557">Json-CS557 Data</a></li>
+                        </ul>
 
                     </ol>
                 </td>
