--- a/index.html
+++ b/index.html
@@ -89,6 +89,14 @@
                             <li> <a href="https://json-18842.herokuapp.com/api/score?course_id=CS551">Json-CS551 Data</a></li>
                             <li> <a href="https://json-18842.herokuapp.com/api/score?course_id=CS557">Json-CS557 Data</a></li>
                         </ul>
+                        <span> &nbsp</span>
+                        <li>
+                            Home Work 10
+                        </li>
+                        <ul>
+                            <li><a href="https://keyur18842.herokuapp.com/hw10/main.html">Device-Responsive</a></li>
+                        </ul>
+                     
 
                     </ol>
                 </td>
